More offerings from dP

--- a/Services.html
+++ b/Services.html
@@ -1,27 +1,71 @@
 ---
 layout: page
 title: Services
+page-title: Gain insight from your data
 ---
 
 <div metal:fill-slot="content">
 	<div class="container">
 	<div class="page-content">
-	<div class="row">
-		<div class="col-md-4">
-			<h2 style="text-align:center">
-							
-				<a href = http://datapipeline.com.au/backup/>
-					<img style="text-align:center" src='{{ "/images/cloud.png" | prepend: site.static_url }}'  width=250px><br>Online Back up</h2>
-				</a>
+        <div class="row">
+            <div class="col-md-4 text-center">
+                <a href = http://datapipeline.com.au/backup/>
+                    <img style="text-align:center" src='{{ "/images/cloud.png" | prepend: site.static_url }}'  width=250px>
+                </a>
+            </div>
+            <div class="col-md-4 text-center">
+                <a href = http://datapipeline.com.au/collection/>
+                    <img style="text-align:center" src='{{ "/images/integrate.png" | prepend: site.static_url }}'  width=250px>
+                </a>
+            </div>
+            <div class="col-md-4 text-center">
+                <a href = http://datapipeline.com.au/analysis/>
+                    <img style="text-align:center" src='{{ "/images/circles.png" | prepend: site.static_url }}'  width=250px>
+                </a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h2 style="text-align:center">
+                    <a href = http://datapipeline.com.au/backup/>
+                        Online Back-up
+                    </a>
+                </h2>
 
-			 <p>
-			    Do you know someone that doesn't back up their files? at dataPipeline we have developed a service to install a backup solution that is easy to use, and cheap to run.
-			    For more information click on the image above.
-			</p>
-			<!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
-		</div>
-		
-	</div>
+                 <p>
+                    Do you know someone that doesn't back up their files? At dataPipeline we have developed a service to install a backup solution that is easy to use, and cheap to run.
+                    For more information, click on the image above.
+                </p>
+                <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+            </div>
+            <div class="col-md-4">
+                <h2 style="text-align:center">
+                    <a href = http://datapipeline.com.au/collection/>
+                        Data Collection
+                    </a>
+                </h2>
+
+                <p>
+                    Regardless of the question, you will need some data to answer it.
+                    We can develop and run projects to help you collect the data you need, whether that is from surveys, websites, external sources, or internal data stores.
+                </p>
+                <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+            </div>
+            <div class="col-md-4">
+                <h2 style="text-align:center">
+
+                    <a href = http://datapipeline.com.au/analysis/>
+                        Data Analysis
+                    </a>
+                </h2>
+
+                <p>
+                    Gain insight from your data, by using best-practice and leading techniques on your company's data.
+                    Our analysis is driven by your domain knowledge and business questions, meaning the results will lead to action.
+                </p>
+                <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+            </div>
+        </div>
 	</div>
 	</div>
 </div>
