updated contact us button

--- a/Services.html
+++ b/Services.html
@@ -9,17 +9,17 @@ page-title: Gain insight from your data
 	<div class="page-content">
         <div class="row">
             <div class="col-md-4 text-center">
-                <a href = http://datapipeline.com.au/backup/>
+                <a href = "/backup/">
                     <img style="text-align:center" src='{{ "/images/cloud.png" | prepend: site.static_url }}'  width=250px>
                 </a>
             </div>
             <div class="col-md-4 text-center">
-                <a href = http://datapipeline.com.au/collection/>
+                <a href = "/collection/">
                     <img style="text-align:center" src='{{ "/images/integrate.png" | prepend: site.static_url }}'  width=250px>
                 </a>
             </div>
             <div class="col-md-4 text-center">
-                <a href = http://datapipeline.com.au/analysis/>
+                <a href = "/analysis/">
                     <img style="text-align:center" src='{{ "/images/circles.png" | prepend: site.static_url }}'  width=250px>
                 </a>
             </div>
