--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ layout: default
                             Combining your expertise of the domain area, and our expertise of the available techniques, we can create a data analytics project to get the answers.
                         </p>
                         <p>Call us to start
-                            <a href="#"><button class="btn btn-primary">asking questions.</button>
+                            <a href="/contactus/"><button class="btn btn-primary">asking questions.</button>
                             </a>
                         </p>
                     </div>
@@ -40,7 +40,7 @@ layout: default
                             It may involve looking at your business records, collecting survey data, or building sensors.
                             We can assist with building those tools, recording the data, and running your data collection project.
                         </p>
-                        <p>Learn more about <a href="#"><button class="btn btn-primary">collecting data</button>
+                        <p>Learn more about <a href="/contactus/"><button class="btn btn-primary">collecting data</button>
                         </a> to answer your questions.</p>
                     </div>
                 </div>
@@ -53,7 +53,7 @@ layout: default
                         <p>Once you have collected your data, the next step is to analyse it to gain insight from data.
                             We are technique experts, and can assist in bringing out the information within the data.
                             By merging with your domain expertise to provide actionable outcomes, the outcomes are focused on your business questions.</p>
-                        <p><a href="#"><button class="btn btn-primary">Create outcomes</button></a> by leveraging your data.</p>
+                        <p><a href="/contactus/"><button class="btn btn-primary">Create outcomes</button></a> by leveraging your data.</p>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@ layout: default
                             We have expertise in a large number of data analytics techniques; strong links to industry and academia; and are driven by a goal of bringing data analytics to small and medium businesses.
                             Our record includes small, medium and large companies in a number of sectors.
                         </p>
-                        <p><a href="#"><button class="btn btn-primary">Contact us today</button></a> to chat about your data analytics needs.</p>
+                        <p><a href="/contactus/"><button class="btn btn-primary">Contact us today</button></a> to chat about your data analytics needs.</p>
                     </div>
                 </div>
             </div>
