--- a/error.html
+++ b/error.html
@@ -13,7 +13,7 @@ layout: default
                     There seems to have been an error with your request. We have logged the issue.
                 </p>
                 <p>
-                    In the meantime, you can <a href="/">go back to the home page</a>, but if the problem persists, please <a class="btn btn-primary btn-lg" href="mailto:contact@datapipeline.com.au" role="button">Contact Us</a>.
+                    In the meantime, you can <a href="/">go back to the home page</a>, but if the problem persists, please <a class="btn btn-primary btn-lg" href="/contactus/" role="button">Contact Us</a>.
                 </p>
             
         </div>
