--- a/Services.html
+++ b/Services.html
@@ -2,6 +2,7 @@
 layout: page
 title: Services
 page-title: Gain insight from your data
+permalink: /services/
 ---
 
 <div metal:fill-slot="content">
