fixed blog posts on front page

--- a/Blog.html
+++ b/Blog.html
@@ -20,7 +20,7 @@ permalink: /Blogs/
                                          <div class="thumbnail" style="width: 100%; "> 
                                             
                                          
-                                            <div id="header_background"  class="header_background2 img-responsive" style='background-repeat:no-repeat;    background-position: center; width:100%; min-height: 450px; background-image: url("/images/{{ post`.image }}");' >
+                                            <div id="header_background"  class=" img-responsive" style='background-repeat:no-repeat;    background-position: center; width:100%; min-height: 450px; background-image: url("/images/{{ post`.image }}");' >
                                             </div>
                                          </div>
                                     </div>
