added data intergration

--- a/Services.html
+++ b/Services.html
@@ -15,6 +15,11 @@ permalink: /services/
                 </a>
             </div>
             <div class="col-md-4 text-center">
+                <a href = "/collection/">
+                    <img style="text-align:center" src='{{ "/images/4466482623_cf7a5c483b_o.jpg" | prepend: site.static_url }}'  width=250px>
+                </a>
+            </div>
+            <div class="col-md-4 text-center">
                 <a href = "/analysis/">
                     <img style="text-align:center" src='{{ "/images/circles.png" | prepend: site.static_url }}'  width=250px>
                 </a>
@@ -31,6 +36,19 @@ permalink: /services/
                 <p>
                     Regardless of the question, you will need some data to answer it.
                     We can develop and run projects to help you collect the data you need, whether that is from surveys, websites, external sources, or internal data stores.
+                </p>
+                <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+            </div>
+            <div class="col-md-4">
+                <h2 style="text-align:center">
+                    <a href = http://datapipeline.com.au/collection/>
+                        Data integration
+                    </a>
+                </h2>
+
+                <p>
+                    Your program needs data, but the format isn't correct. We can work with your existing software to integrate new data feeds and clean up messy data. We can work with binary data, custom formats, mapping data, and big data. Further, we have access to expertise in a large number of domains to assist with handling highly specialised data sources.
+
                 </p>
                 <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
             </div>
