fixed blog pictures and add data intergration info

--- a/Services.html
+++ b/Services.html
@@ -15,8 +15,8 @@ permalink: /services/
                 </a>
             </div>
             <div class="col-md-4 text-center">
-                <a href = "/collection/">
-                    <img style="text-align:center" src='{{ "/images/4466482623_cf7a5c483b_o.jpg" | prepend: site.static_url }}'  width=250px>
+                <a href = "/integration/">
+                    <img style="text-align:center" src='{{ "/images/flowchart.png" | prepend: site.static_url }}'  width=250px>
                 </a>
             </div>
             <div class="col-md-4 text-center">
