added logo and new carousel

--- a/Services.html
+++ b/Services.html
@@ -41,7 +41,7 @@ permalink: /services/
             </div>
             <div class="col-md-4">
                 <h2 style="text-align:center">
-                    <a href = http://datapipeline.com.au/collection/>
+                    <a href = http://datapipeline.com.au/integration/>
                         Data integration
                     </a>
                 </h2>
